--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="btn-section">
-          <button type="submit" class="btn">Calculate</button>
+          <button type="submit" class="btn"><img src="./assets/images/icon-arrow.svg" alt=""></button>
         </div>
       </form>
       <div class="date-display">
