--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <img src="/design/desktop-design.jpg" alt="" style="position: absolute;z-index: -11;">
+  <!-- <img src="/design/desktop-design.jpg" alt="" style="position: absolute;z-index: -11;left: 0;"> -->
   <main>
     <div class="card">
       <form class="date-section">
@@ -32,24 +32,28 @@
           <div class="date-input">
             <label for="day">Day</label>
             <input type="text" name="day" id="day" placeholder="DD" maxlength="2">
+            <p class="form-text">This field is required</p>
           </div>
           <div class="date-input">
             <label for="month">Month</label>
             <input type="text" name="month" id="month" placeholder="MM" maxlength="2">
+            <p class="form-text">This field is required</p>
           </div>
           <div class="date-input">
             <label for="year">Year</label>
             <input type="text" name="year" id="year" placeholder="YYYY" maxlength="4">
+            <p class="form-text">This field is required</p>
           </div>
         </div>
         <div class="btn-section">
-          <button type="submit" class="btn"><img src="./assets/images/icon-arrow.svg" alt=""></button>
+          <button type="submit" class="btn" aria-label="Submit">
+            <img src="./assets/images/icon-arrow.svg" alt=""></button>
         </div>
       </form>
       <div class="date-display">
-        <div class="year"><span>--</span> years</div>
-        <div class="month"><span>--</span> months</div>
-        <div class="day"><span>--</span> days</div>
+        <div class="year"><span id="year-num">--</span> years</div>
+        <div class="month"><span id="month-num">--</span> months</div>
+        <div class="day"><span id="day-num">--</span> days</div>
       </div>
     </div>
 
@@ -59,6 +63,7 @@
       Coded by <a href="#">Your Name Here</a>.
     </div>
   </main>
+  <script src="./script.js"></script>
 </body>
 
 </html>
